--- a/server/package.json
+++ b/server/package.json
@@ -50,6 +50,7 @@
     "@types/node-fetch": "^2.5.7",
     "jest": "^26.4.2",
     "node-fetch": "^2.6.1",
+    "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
   },
