--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-testing-library": "^3.8.0",
     "install": "^0.13.0",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
     "jest-fetch-mock": "3.0.3",
     "prettier": "^2.1.1",
     "redux-mock-store": "^1.5.4",
