--- a/server/package.json
+++ b/server/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/node-fetch": "^2.5.7",
+    "@types/supertest": "^2.0.10",
     "jest": "^26.4.2",
     "node-fetch": "^2.6.1",
     "supertest": "^4.0.2",
@@ -56,7 +57,6 @@
   },
   "dependencies": {
     "nodemon": "^2.0.4",
-    "swagger-ui-express": "^4.1.4",
     "ts-node": "^9.0.0"
   }
 }
