--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,10 +12,11 @@ sonar.projectVersion=2.8
 sonar.sources=./src,./server
 sonar.exclusions=./build,./analysis/*
 
-# sonar.eslint.reportPaths=./analysis/report.json
-# sonar.verbose=true
+sonar.verbose=true
+
 # Coverage
-# -Dsonar.javascript.lcov.reportPaths=coverage/coverage-final.json
+sonar.javascript.lcov.reportPaths=coverage/coverage-final.json
+sonar.eslint.reportPaths=analysis/report.json
 
 sonar.sourceEncoding=UTF-8
 
