--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -65,9 +65,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       # unit test
-      #- name: Unit Tests
-      #  run: npm run test
-      # e2e
+      - name: Unit Tests
+        run: npm run test
+      # TODO: e2e
       # - name: End to end tests
       #   run: npm run test
 
@@ -83,10 +83,14 @@ jobs:
       # Install dependecies
       - name: Install dependencies
         run: npm ci
+      # Coverage
+      - name: Coverage
+        run: npm run test:coverage
       # Generate report
-      #- name: Lint report
-      #  run: eslint -f json -o ./analysis/report.json .
-      # https://github.com/marketplace/actions/sonarcloud-scan
+      - name: Lint report
+        run: eslint -f json -o ./analysis/report.json .
+
+        # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
