--- a/package.json
+++ b/package.json
@@ -119,7 +119,7 @@
     "CRA:build": "react-scripts build ",
     "CRA:eject": "react-scripts eject",
     "test": "react-scripts test --env=jest-environment-jsdom-sixteen",
-    "test:coverage": "react-scripts test --coverage --env=jest-environment-jsdom-sixteen  --testResultsProcessor ./node_modules/jest-sonar-reporter ",
+    "test:coverage": "react-scripts test --coverage --env=jest-environment-jsdom-sixteen  --watchAll=false --silent --testResultsProcessor ./node_modules/jest-sonar-reporter ",
     "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache --env=jest-environment-jsdom-sixteen",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
     "lint:report": "./node_modules/.bin/eslint -f json -o ./analysis/report.json .",
