--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,11 +20,11 @@ sonar.verbose=true
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.eslint.reportPaths=./analysis/report.json
 sonar.testExecutionReportPaths=./analysis/jest-sonar-report.xml
+sonar.tests=src
+sonar.test.inclusions=**/*.test.ts
 
-sonar.typescript.tsconfigPath=./tsconfig.json
 # Remove this after test
 # sonar.coverage.exclusions=**/**
 
 # Encoding
 sonar.sourceEncoding=UTF-8
-
