--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -88,8 +88,8 @@ jobs:
       #- name: Coverage
       #  run: npm run test:coverage
       # Generate report
-      - name: Lint report
-        run: npm run lint:report
+      #- name: Lint report
+      #  run: npm run lint:report
 
         # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
