--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "helmet": "^4.1.1",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-http-backend": "^1.0.20",
+    "i18next-http-backend": "^1.0.21",
     "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "localforage": "^1.9.0",
@@ -85,7 +85,7 @@
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
-    "react-i18next": "^11.7.2",
+    "react-i18next": "^11.7.3",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
@@ -110,7 +110,7 @@
     "dev": "concurrently -p \"[{name}]\" -n server,client -c \"bgGreen.bold,bgBlue.bold\"  --kill-others-on-fail \"npm run dev:server\" \"npm run dev:client\"",
     "dev:server": "cd server && nodemon --config \"./nodemon.json\"",
     "dev:client": "react-scripts start ",
-    "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server",
+    "prod:build:server": "tsc --pretty --allowJs --outDir ./build_server -p ./server/tsconfig.json",
     "prod:heroku": "npm run prod:heroku:server && npm run prod:heroku:client",
     "prod:heroku:server": "./node_modules/.bin/ts-node --project ./server/tsconfig.json ./server/server.ts  server.js --optimize_for_size --max_old_space_size=460 --gc_interval=100",
     "prod:heroku:client": "node --optimize_for_size --max_old_space_size=460 -gc_interval=100 node_modules/.bin/react-scripts build",
@@ -140,12 +140,12 @@
   "devDependencies": {
     "@ljharb/eslint-config": "^17.2.0",
     "@shinnn/eslint-config": "^7.0.0",
-    "@testing-library/dom": "^7.24.2",
+    "@testing-library/dom": "^7.24.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.6",
     "@types/dotenv": "^8.2.0",
-    "@types/react-bootstrap-table-next": "^4.0.7",
+    "@types/react-bootstrap-table-next": "^4.0.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux-mock-store": "^1.0.2",
@@ -156,13 +156,13 @@
     "concurrently": "^5.3.0",
     "eslint": "^6.8.0",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-prettier": "^6.12.0",
     "eslint-config-sinon": "^4.0.0",
     "eslint-config-strict": "^14.0.1",
     "eslint-plugin-ie11": "^1.0.0",
-    "eslint-plugin-jsdoc": "^30.5.1",
+    "eslint-plugin-jsdoc": "^30.5.2",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react": "^7.21.2",
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-testing-library": "^3.9.0",
     "install": "^0.13.0",
