--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     ]
   },
   "dependencies": {
+    "@airbnb/node-memwatch": "^2.0.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
@@ -58,11 +59,12 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/react-select": "^3.0.20",
     "@types/umzug": "^2.2.3",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "glob": "^7.1.6",
+    "heapdump": "^0.3.15",
     "helmet": "^4.1.1",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
