--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,11 +5,11 @@ sonar.projectKey=paolocattani_calcetto
 ## https://sonarcloud.io/documentation/analysis/analysis-parameters/
 # Optional Parameters
 sonar.projectName=Calcetto
-sonar.projectVersion=2.9.2
+sonar.projectVersion=2.9.3
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./src,./server
+sonar.sources=./src,./server,./coverage
 
 # Exclusions
 sonar.exclusions=./build,./analysis/*
