--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "proxy": "http://localhost:5001",
   "repository": {
     "type": "git",
-    "url": "https://github.com/paolocattani/calcetto.git/"
+    "url": "github.com/paolocattani/calcetto"
   },
   "husky": {
     "hooks": {
@@ -36,33 +36,10 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@types/bcrypt": "^3.0.0",
-    "@types/bluebird": "^3.5.32",
-    "@types/body-parser": "^1.19.0",
-    "@types/compression": "^1.7.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.7",
-    "@types/express": "^4.17.8",
-    "@types/express-session": "^1.17.0",
-    "@types/glob": "^7.1.3",
-    "@types/helmet": "0.0.48",
-    "@types/jest": "^24.9.1",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/morgan": "^1.9.1",
-    "@types/react": "^16.9.49",
-    "@types/react-bootstrap-date-picker": "^4.0.6",
-    "@types/react-datepicker": "^2.11.1",
-    "@types/react-dom": "^16.9.8",
-    "@types/react-facebook-login": "^4.1.2",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-select": "^3.0.20",
-    "@types/umzug": "^2.2.3",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.2",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "glob": "^7.1.6",
-    "heapdump": "^0.3.15",
     "helmet": "^4.1.1",
     "i18next": "^19.7.0",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -144,13 +121,31 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
     "@testing-library/user-event": "^12.1.6",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.32",
+    "@types/body-parser": "^1.19.0",
+    "@types/compression": "^1.7.0",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.8",
+    "@types/helmet": "0.0.48",
+    "@types/jest": "^24.9.1",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/morgan": "^1.9.1",
     "@types/node": "^12.12.62",
+    "@types/react": "^16.9.52",
+    "@types/react-bootstrap-date-picker": "^4.0.6",
     "@types/react-bootstrap-table-next": "^4.0.8",
+    "@types/react-datepicker": "^2.11.1",
+    "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/react-select": "^3.0.22",
     "@types/react-test-renderer": "^16.9.3",
     "@types/redux-mock-store": "^1.0.2",
     "@types/swagger-ui-react": "^3.23.3",
+    "@types/umzug": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-node": "0.0.1-security",
