--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=2.9.3
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./src,./server,./coverage
+sonar.sources=./src,./server
 
 # Exclusions
 sonar.exclusions=./build,./analysis/*
@@ -17,6 +17,7 @@ sonar.exclusions=./build,./analysis/*
 sonar.verbose=true
 
 # Coverage and Test
+sonar.dynamicAnalysis=reuseReports
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 sonar.eslint.reportPaths=./analysis/report.json
 sonar.testExecutionReportPaths=./analysis/jest-sonar-report.xml
