--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.verbose=true
 
 # Coverage and Test
 sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.typescript.lcov.reportPaths=./coverage/lcov.info
 sonar.eslint.reportPaths=./analysis/report.json
 sonar.testExecutionReportPaths=./analysis/jest-sonar-report.xml
 sonar.tests=src
