--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,10 +9,10 @@ sonar.projectVersion=2.9.3
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./src,./server
+sonar.sources=./src,./server,./analysis/*,./coverage/*
 
 # Exclusions
-sonar.exclusions=./build,./analysis/*
+sonar.exclusions=./build,./analysis/*,./coverage/*
 
 sonar.verbose=true
 
