--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,10 +9,10 @@ sonar.projectVersion=2.9.3
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./src,./server,./analysis/*,./coverage/*
+sonar.sources=./src , ./server , ./analysis , ./coverage
 
 # Exclusions
-sonar.exclusions=./build,./analysis/*,./coverage/*
+sonar.exclusions=./build, ./analysis , ./coverage
 
 sonar.verbose=true
 
@@ -21,7 +21,7 @@ sonar.dynamicAnalysis=reuseReports
 sonar.typescript.lcov.reportPaths=./coverage/lcov.info
 sonar.eslint.reportPaths=./analysis/report.json
 sonar.testExecutionReportPaths=./analysis/jest-sonar-report.xml
-sonar.tests=src
+sonar.tests=./src, ./server/test
 sonar.test.inclusions=**/*.test.ts
 
 # Remove this after test
