--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ NODE_ENV=development
 #Client
 CLIENT_HOST=localhost #Utilizzato dal server
 CLIENT_PORT=5000 #Utilizzato dal server
-REACT_APP_CLIENT_VERSION=2.9.3
-REACT_APP_CLIENT_COMMIT_HASH=b777a80
+REACT_APP_CLIENT_VERSION=2.9.4_v2020.10.15
+REACT_APP_CLIENT_COMMIT_HASH=f52f041
 CLIENT_COMMIT_HASH=15
 
 PORT=5000
