--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,19 +5,19 @@ sonar.projectKey=paolocattani_calcetto
 ## https://sonarcloud.io/documentation/analysis/analysis-parameters/
 # Optional Parameters
 sonar.projectName=Calcetto
-sonar.projectVersion=2.9.3
+sonar.projectVersion=2.9.4
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./src , ./server , ./analysis , ./coverage
+sonar.sources=./src, ./server, ./analysis, ./coverage
 
 # Exclusions
-sonar.exclusions=./build, ./analysis , ./coverage
+sonar.exclusions=./build, ./analysis/**/* , ./coverage/**/*
 
 sonar.verbose=true
 
 # Coverage and Test
-sonar.dynamicAnalysis=reuseReports
+# sonar.dynamicAnalysis=reuseReports
 sonar.typescript.lcov.reportPaths=./coverage/lcov.info
 sonar.eslint.reportPaths=./analysis/report.json
 sonar.testExecutionReportPaths=./analysis/jest-sonar-report.xml
