--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
     "@types/helmet": "0.0.48",
+    "@types/history": "^4.7.8",
     "@types/jest": "^24.9.1",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/morgan": "^1.9.1",
