--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -36,7 +36,7 @@ jobs:
         run: npm ci
       # Build client
       - name: Build client
-        run: sh ./cli/build.sh
+        run: bash ./cli/build.sh
       # Build server
       - name: Build server
         run: npm run prod:build:server
