--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,7 +12,7 @@ sonar.projectVersion=2.9.8
 sonar.sources=./src, ./server, ./analysis, ./coverage
 
 # Exclusions
-sonar.exclusions=./build, ./analysis/**/* , ./coverage/**/*
+sonar.exclusions=./build, ./analysis , ./coverage
 
 sonar.verbose=true
 
