--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,6 +13,9 @@ sonar.sources=./src, ./server, ./analysis, ./coverage
 
 # Exclusions
 sonar.exclusions=./build, ./analysis , ./coverage
+sonar.cpd.exclusions= ./build, ./analysis , ./coverage
+sonar.coverage.exclusions= ./build, ./analysis , ./coverage
+
 
 sonar.verbose=true
 
