--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,8 +13,8 @@ sonar.sources=./src, ./server, ./analysis, ./coverage
 
 # Exclusions
 sonar.exclusions=./build, ./analysis , ./coverage
-sonar.cpd.exclusions= ./build, ./analysis , ./coverage
-sonar.coverage.exclusions= ./build, ./analysis , ./coverage
+sonar.cpd.exclusions= ./build/**/*, ./analysis/**/* , ./coverage/**/*
+sonar.coverage.exclusions= ./build/**/*, ./analysis/**/* , ./coverage/**/*
 
 
 sonar.verbose=true
