--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -1,7 +1,7 @@
 
 
-on: [push, pull_request]
 name: Build/Test/Analyze
+on: [push, pull_request]
 
 jobs:
   ### Build
@@ -40,33 +40,39 @@ jobs:
       # Build server
       - name: Build server
         run: npm run prod:build:server
+      # Save build, coverage and analysis for later use
+      - name: Upload build
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: |
+            build
+      - name: Upload coverage and analysis
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage
+          path: |
+            coverage
+            analysis
 
   ### Test
   test:
     runs-on: ubuntu-latest
+    needs: build
     name: Tests
     # For now disable this step
     if: ${{ 1==2 }}
     steps:
-      - uses: actions/checkout@v2
-      # Cache node-modules
-      - name: Cache Node.js modules
-        uses: actions/cache@v2
-        env:
-          cache-name: cache-node-modules
+      - name: Download build
+        uses: actions/download-artifact@v2
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      # Install dependecies
-      - name: Install dependencies
-        run: npm ci
-      # unit test
+          name: build
+      # unit test FE
       - name: Unit Tests
         run: npm run test
+      # TODO: unit test BE
+      #- name: Unit Tests
+      #  run: npm run test
       # TODO: e2e
       # - name: End to end tests
       #   run: npm run test
@@ -74,22 +80,13 @@ jobs:
   ### Code Quality
   analyze:
     runs-on: ubuntu-latest
+    needs: build
     name: Code Quality
     steps:
-      - uses: actions/checkout@v2
+      - name: Download build
+        uses: actions/download-artifact@v2
         with:
-          # Disabling shallow clone is recommended for improving relevancy of reporting
-          fetch-depth: 0
-      # Install dependecies
-      - name: Install dependencies
-        run: npm ci
-      # Need more investigation. Maybe I'll have to eject.....
-      # Coverage
-      #- name: Coverage
-      #  run: npm run test:coverage
-      # Generate report
-      #- name: Lint report
-      #  run: npm run lint:report
+          name: build
 
         # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
