--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,26 +9,26 @@ sonar.projectVersion=2.9.8
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=./src, ./server, ./analysis, ./coverage
+sonar.sources=src, server, analysis, coverage, build
 
 # Exclusions
-sonar.exclusions=./build, ./analysis , ./coverage
-sonar.cpd.exclusions= ./build/**/*, ./analysis/**/* , ./coverage/**/*
-sonar.coverage.exclusions= ./build/**/*, ./analysis/**/* , ./coverage/**/*
+# Remove this after test
+# sonar.coverage.exclusions=**/**
+sonar.exclusions=build, analysis , coverage
+sonar.cpd.exclusions= build/**/*, analysis/**/* , coverage/**/*
+sonar.coverage.exclusions= build/**/*, analysis/**/* , coverage/**/*
 
 
 sonar.verbose=true
 
 # Coverage and Test
 # sonar.dynamicAnalysis=reuseReports
-sonar.typescript.lcov.reportPaths=./coverage/lcov.info
-sonar.eslint.reportPaths=./analysis/report.json
-sonar.testExecutionReportPaths=./analysis/jest-sonar-report.xml
-sonar.tests=./src, ./server/test
-sonar.test.inclusions=**/*.test.ts
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.eslint.reportPaths=analysis/report.json
 
-# Remove this after test
-# sonar.coverage.exclusions=**/**
+sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
+sonar.tests=src/test, server/test
+sonar.test.inclusions=**/*.test.ts
 
 # Encoding
 sonar.sourceEncoding=UTF-8
