--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,10 +14,9 @@ sonar.sources=src, server, analysis, coverage, build
 # Exclusions
 # Remove this after test
 # sonar.coverage.exclusions=**/**
-sonar.exclusions=build, analysis , coverage
-sonar.cpd.exclusions= build/**/*, analysis/**/* , coverage/**/*
-sonar.coverage.exclusions= build/**/*, analysis/**/* , coverage/**/*
-
+sonar.exclusions=build/**, analysis/** , coverage/**
+sonar.cpd.exclusions= build/**, analysis/** , coverage/**
+sonar.coverage.exclusions= build/**, analysis/** , coverage/**
 
 sonar.verbose=true
 
