--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -9,7 +9,7 @@ sonar.projectVersion=2.9.9
 
 # relative paths to source directories. More details and properties are described
 # in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
-sonar.sources=src, server, analysis, coverage, build
+#sonar.sources=src, server, analysis, coverage, build
 
 # Exclusions
 # Remove this after test
