--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.sources=src, server
 # Exclusions
 # Remove this after test
 # sonar.coverage.exclusions=**/**
-sonar.exclusions=build/**, analysis/** , coverage/**
+# sonar.exclusions=build/**, analysis/** , coverage/**
 sonar.cpd.exclusions= build/**, analysis/** , coverage/**
 sonar.coverage.exclusions= build/**, analysis/** , coverage/**
 
