--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -13,7 +13,6 @@ jobs:
         node-version: [ 10.x, 12.x, 14.x]
     steps:
       - uses: actions/checkout@v2
-
       # Set up Node
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
@@ -54,6 +53,13 @@ jobs:
           path: |
             coverage
             analysis
+      - name: Upload node_modules
+        uses: actions/upload-artifact@v2
+        with:
+          name: coverage
+          path: |
+            coverage
+            analysis
 
   ### Test
   test:
@@ -63,10 +69,10 @@ jobs:
     # For now disable this step
     # if: ${{ 1==2 }}
     steps:
-      - name: Download build
-        uses: actions/download-artifact@v2
-        with:
-          name: build
+      - uses: actions/checkout@v2
+      # Install dependecies
+      - name: Install dependencies
+        run: npm ci
       # unit test FE
       - name: Unit Tests
         run: npm run test
@@ -83,6 +89,7 @@ jobs:
     needs: build
     name: Code Quality
     steps:
+      - uses: actions/checkout@v2
       - name: Download build
         uses: actions/download-artifact@v2
         with:
