--- a/.github/workflows/Complete Pipeline.yml
+++ b/.github/workflows/Complete Pipeline.yml
@@ -94,7 +94,10 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: build
-
+      - name: Download Coverage
+        uses: actions/download-artifact@v2
+        with:
+          name: coverage
         # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
