--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,36 @@
-# sonar.host.url=https://sonarcloud.io
+## https://sonarcloud.io/documentation/analysis/analysis-parameters/
+
+# Project
 sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
-
-## https://sonarcloud.io/documentation/analysis/analysis-parameters/
-# Optional Parameters
 sonar.projectName=Calcetto
 sonar.projectVersion=2.9.9
+sonar.typescript.tsconfigPath=./, ./server
+
+# General : Encoding, Language, Debug
+sonar.sourceEncoding=UTF-8
+sonar.language=ts
+sonar.verbose=true
+
+# Sources
+# relative paths to source directories. More details and properties are described
+# in https://sonarcloud.io/documentation/project-administration/narrowing-the-focus/
+sonar.sources=src, server, analysis, coverage, build
+#sonar.sources=src, server
+
+# Exclusions
+sonar.exclusions=build/**, analysis/** , coverage/**
+# sonar.cpd.exclusions= build/**, analysis/** , coverage/**
+# sonar.coverage.exclusions= build/**, analysis/** , coverage/**
+
+# Coverage and Test
+# sonar.dynamicAnalysis=reuseReports
+sonar.javascript.lcov.reportPaths=coverage/*
+sonar.eslint.reportPaths=analysis/report.json
+
+# Test
+sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
+sonar.tests=src/test, server/test
+sonar.test.inclusions=**/*.test.ts
+
+
