--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,8 +20,8 @@ sonar.sources=src, server, analysis, coverage, build
 
 # Exclusions
 sonar.exclusions=build/**, analysis/** , coverage/**
-# sonar.cpd.exclusions= build/**, analysis/** , coverage/**
-# sonar.coverage.exclusions= build/**, analysis/** , coverage/**
+sonar.cpd.exclusions= build/**, analysis/** , coverage/**
+sonar.coverage.exclusions= build/**, analysis/** , coverage/**
 
 # Coverage and Test
 # sonar.dynamicAnalysis=reuseReports
