--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,7 +18,7 @@ sonar.verbose=true
 sonar.sources=src, server, analysis, coverage, build
 
 # Exclusions
-#sonar.exclusions=build/**, analysis/** , coverage/**
+ sonar.issue.ignore.allfile=build/**, analysis/** , coverage/**
 sonar.cpd.exclusions= build/**, analysis/** , coverage/**
 sonar.coverage.exclusions= build/**, analysis/** , coverage/**
 
