--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,12 +18,12 @@ sonar.verbose=true
 sonar.sources=src, server, analysis, coverage, build
 
 # Exclusions
- sonar.issue.ignore.allfile=build/**, analysis/** , coverage/**
+sonar.issue.ignore.allfile=build/**, analysis/** , coverage/**
 sonar.cpd.exclusions= build/**, analysis/** , coverage/**
 sonar.coverage.exclusions= build/**, analysis/** , coverage/**
 
 # Coverage and Test
-# sonar.dynamicAnalysis=reuseReports
+sonar.dynamicAnalysis=reuseReports
 sonar.javascript.lcov.reportPaths=coverage/*
 sonar.eslint.reportPaths=analysis/report.json
 
