--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.organization=paolocattani
 sonar.projectKey=paolocattani_calcetto
 sonar.projectName=Calcetto
 sonar.projectVersion=2.9.9
-sonar.typescript.tsconfigPath=./, ./server
+#sonar.typescript.tsconfigPath=tsconfig.json
 
 # General : Encoding, Language, Debug
 sonar.sourceEncoding=UTF-8
@@ -24,8 +24,8 @@ sonar.coverage.exclusions= build/**, analysis/** , coverage/**
 
 # Coverage and Test
 sonar.dynamicAnalysis=reuseReports
-sonar.javascript.lcov.reportPaths=coverage/*
-sonar.eslint.reportPaths=analysis/report.json
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.eslint.reportPaths=analysis/eslint-report.json
 
 # Test
 sonar.testExecutionReportPaths=analysis/jest-sonar-report.xml
