--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -91,9 +91,13 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: coverage
-        # https://github.com/marketplace/actions/sonarcloud-scan
+      - name: Test
+        run: pwd && ls -l
+      # https://github.com/marketplace/actions/sonarcloud-scan
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: /home/runner/work/calcetto/calcetto
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
