Fix Unit test server

--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,10 @@
     "prod:build": "tsc --pretty",
     "dev": "nodemon --config \"./nodemon.json\"",
     "test": "jest -o --watch",
-    "test:coverage": "jest --coverage --detectOpenHandles"
+    "test:coverage": "jest --coverage --detectOpenHandles",
+    "e2e:test": "jest --detectOpenHandles",
+    "e2e:server":" ../node_modules/.bin/ts-node ./test/serverTest.ts ",
+    "e2e":"start-test e2e:server 5001 e2e:test"
   },
   "author": "",
   "license": "ISC",
@@ -52,6 +55,7 @@
     "@types/supertest": "^2.0.10",
     "jest": "^26.4.2",
     "node-fetch": "^2.6.1",
+    "start-server-and-test": "^1.11.5",
     "supertest": "^4.0.2",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
